--- a/app/src/main/res/layout/activity_intercom.xml
+++ b/app/src/main/res/layout/activity_intercom.xml
@@ -9,8 +9,8 @@
 
     <WebView
             android:id="@+id/webview"
-            android:layout_width="386dp"
-            android:layout_height="414dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             tools:layout_editor_absoluteX="0dp"
             tools:layout_editor_absoluteY="0dp"/>
     <WebView
