--- a/app/src/main/res/layout/activity_intercom.xml
+++ b/app/src/main/res/layout/activity_intercom.xml
@@ -12,11 +12,30 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp"/>
+            tools:layout_editor_absoluteY="0dp">
+    </WebView>
     <WebView
             android:id="@+id/soundview"
             android:layout_width="1dp"
             android:layout_height="1dp"
             tools:layout_editor_absoluteY="467dp"
             tools:layout_editor_absoluteX="8dp"/>
+    <Button
+            android:id="@+id/btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:layout_editor_absoluteX="0dp"
+
+            android:text="Scan Barcode or QR code"
+            android:layout_marginTop="180dp" app:layout_constraintTop_toTopOf="@+id/tvresult"/>
+    <TextView
+            android:id="@+id/tvresult"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="250dp"
+            android:textColor="#000"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Result will be here" tools:layout_editor_absoluteY="0dp"
+            tools:layout_editor_absoluteX="0dp"/>
+
 </android.support.constraint.ConstraintLayout>
