--- a/app/src/main/res/layout/activity_intercom.xml
+++ b/app/src/main/res/layout/activity_intercom.xml
@@ -11,31 +11,51 @@
             android:id="@+id/webview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp">
-    </WebView>
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="0dp"/>
     <WebView
             android:id="@+id/soundview"
             android:layout_width="1dp"
             android:layout_height="1dp"
             tools:layout_editor_absoluteY="467dp"
             tools:layout_editor_absoluteX="8dp"/>
+
     <Button
-            android:id="@+id/btn"
+            android:id="@+id/scanqrcode"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Scan Barcode or QR code"
+            android:layout_marginTop="172dp"
+            app:layout_constraintTop_toTopOf="@+id/webview" app:layout_constraintStart_toStartOf="@+id/webview"
+            android:layout_marginStart="396dp"/>
+
+    <TextView
+            android:id="@+id/tvresult"
+            android:layout_width="271dp"
+            android:layout_height="41dp"
+            android:textColor="#000"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Result will be here"
+            android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/scanqrcode" android:layout_marginStart="396dp"
+            app:layout_constraintStart_toStartOf="@+id/webview"/>
+
+<!--
+    <Button
+            android:id="@+id/showqrcode"
+            android:text="Show QR codes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:layout_editor_absoluteX="0dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/tvresult"/>
 
-            android:text="Scan Barcode or QR code"
-            android:layout_marginTop="180dp" app:layout_constraintTop_toTopOf="@+id/tvresult"/>
     <TextView
-            android:id="@+id/tvresult"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="250dp"
-            android:textColor="#000"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Result will be here" tools:layout_editor_absoluteY="0dp"
-            tools:layout_editor_absoluteX="0dp"/>
+            android:id="@+id/showqrcode_tv"
+            android:text="TextView"
+            android:layout_width="195dp"
+            android:layout_height="108dp" tools:layout_editor_absoluteX="0dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/showqrcode"/>
 
+-->
 </android.support.constraint.ConstraintLayout>
